# qwable

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.en.md  INSTALL.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  SETUP.md  VERSION  pyproject.toml  requirements.txt  setup.sh
docs/: INTERNAL.md
qwable/: __init__.py  action_parser.py  agent_events.py  agent_orchestrator.py  agent_prompts.py  agent_router.py  agent_state.py  agent_store.py  cli.py  config.py  context_compactor.py  context_pack.py  conversation_store.py  fusion_core.py  fusion_deliberation.py  fusion_presets.py  fusion_request.py  fusion_retry.py  fusion_schemas.py  fusion_synthesis.py  message_parsing.py  mlx_optimizations.py  model_capabilities.py  model_roles.py  model_selector.py  models.py  patch_protocol.py  profiles.py  prompts.py  render_anthropic_messages.py  render_openai_chat.py  render_openai_responses.py  repair_loop.py  repo_index.py  schemas.py  server.py  static_fit.py  streaming.py  streaming_events.py  test_runner.py  (+9 more)
qwable_sdk/: __init__.py  client.py  events.py  types.py
scripts/: benchmark_m5.sh  benchmark_speculative.py  install_warmup_launchd.sh  lms_benchmark.py  pull_mlx_models.sh  pull_models.sh  pull_vision_models.sh  setup_ds4.sh  start_all.sh  start_ds4.sh  start_server.sh  stop_all.sh  stress_test.sh  test_agentic_mlx.sh  test_agentic_pro.sh  test_ds4.sh  test_formatter_mlx.sh  test_fusion_bad_preset.sh  test_fusion_budget.sh  test_fusion_coding.sh  test_fusion_custom.sh  test_fusion_heavy.sh  test_fusion_quality.sh  test_ollama.sh  test_ollama_tools.sh  (+8 more)
(+90 files in other folders)
