[project]
name = "qwable"
version = "1.8.0"
description = "Tool-aware local multi-model gateway for Codex, Claude Code, Hermes, Ollama, and ds4."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "HenryLinyy" }]
requires-python = ">=3.11"
keywords = ["local-llm", "apple-silicon", "mlx", "codex", "claude-code"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jsonschema>=4.23.0",
]

[project.scripts]
qwable = "qwable.cli:main"

[project.urls]
Homepage = "https://github.com/HenryLinyy/qwable"
Repository = "https://github.com/HenryLinyy/qwable"
Issues = "https://github.com/HenryLinyy/qwable/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
qwable = ["web/*.html"]

[tool.setuptools.packages.find]
include = ["qwable", "qwable.*", "qwable_sdk", "qwable_sdk.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
